# lean-ctx

./: .clinerules  .cursorrules  .gitattributes  .github-ignore  .gitignore  .gitlab-ci.yml  .gitmodules  .windsurfrules  AGENTS.md  AGENTS.md.lean-ctx.bak  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRACTS.md  CONTRIBUTING.md  DEPLOY_CHECKLIST.md  DEVELOPMENT.md  Dockerfile.web  ECOSYSTEM.md  LEAN-CTX.md  LEANCTX_FEATURE_CATALOG.md  Makefile  README.md  SECURITY.md  VISION.md  discord-faq.md  docker-compose.yml  install.sh  package-lock.json  package.json
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/leanctx/: __init__.py  client.py  conformance.py  errors.py  tool_text.py
clients/python/tests/: test_adapters.py  test_client.py  test_conformance.py
clients/rust/lean-ctx-client/: .gitignore  Cargo.toml  README.md
cloud/: .env.example  Cargo.toml  Dockerfile
cloud/migrations/: 001_init.sql
cloud/src/: lib.rs  main.rs
cloud/src/auth/: mod.rs
cloud/src/db/: mod.rs  queries.rs  schema.rs
cloud/src/routes/: admin.rs  auth.rs  contribute.rs  mod.rs  pro.rs  stats.rs  stripe.rs  sync.rs
rust/: .gitignore  AGENTS.md  Cargo.toml  LEAN-CTX.md  LOCK_ORDERING.md  README.md  build.rs  clippy.toml  deny.toml  dev-install.sh
rust/.config/: nextest-tmpdir.sh  nextest.toml
rust/.kiro/steering/: lean-ctx.md
rust/benches/: compression.rs  efficiency.rs  graph_export.rs
rust/crates/lean-ctx-sdk/: Cargo.toml  README.md
rust/data/: addon_registry.json
rust/eval/: recording.json
rust/eval/testbench/: recording.json
rust/examples/: lean-ctx-session-metrics.mdc  lean-ctx.mdc
rust/src/: cli.rs  cloud_client.rs  cloud_server_main.rs  cloud_sync.rs  compound_lexer.rs  config_io.rs  daemon.rs  daemon_autostart.rs  daemon_client.rs  doctor.rs  dropin.rs  heatmap.rs  hook_handlers.rs  hooks.rs  instructions.rs  lib.rs  main.rs  marked_block.rs  mcp_stdio.rs  proxy_autostart.rs  proxy_setup.rs  report.rs  rewrite_registry.rs  rules_inject.rs  server.rs  setup.rs  shell.rs  shell_hook.rs  status.rs  terminal_ui.rs  token_report.rs  tool_defs.rs  uninstall.rs
rust/src/cli/: addon_cmd.rs  agent_cmd.rs  allow_cmd.rs  audit_report.rs  call_cmd.rs  cheatsheet_cmd.rs  cloud.rs  common.rs  compress_cmd.rs  config_cmd.rs  context_cmd.rs  debug_log_cmd.rs  discover_cmd.rs  dispatch.rs  eval_cmd.rs  export_rules.rs  harden.rs  index_cmd.rs  init_cmd.rs  introspect_cmd.rs  knowledge_cmd.rs  learn_cmd.rs  mod.rs  output_savings_cmd.rs  overview_cmd.rs  pack_cmd.rs  plugin_cmd.rs  policy_cmd.rs  profile_cmd.rs  proof_cmd.rs  read_cmd.rs  roi_cmd.rs  rules_cmd.rs  rules_dedup.rs  semantic_search_cmd.rs  session_cmd.rs  shell_init.rs  snapshot_cmd.rs  tee_cmd.rs  theme_cmd.rs  (+6 more)
rust/src/cloud_server/: account_admin.rs  account_cloud.rs  auth.rs  billing_edge.rs  buddy.rs  cep.rs  commands.rs  config.rs  contribute.rs  db.rs  devices.rs  digest.rs  feedback.rs  gain.rs  global_stats.rs  gotchas.rs  index_sync.rs  invite.rs  knowledge.rs  leaderboard.rs  mod.rs  models.rs  oauth.rs  profile.rs  site_theme.rs  sso.rs  stats.rs  team_join.rs  wrapped.rs
rust/src/core/: a2a_transport.rs  active_inference.rs  adaptive.rs  adaptive_chunking.rs  adaptive_mode_policy.rs  adaptive_thresholds.rs  agent_budget.rs  agent_identity.rs  agent_registry.rs  agent_runtime_env.rs  agents.rs  ann_cache.rs  anomaly.rs  archive.rs  archive_fts.rs  artifact_index.rs  artifacts.rs  attention_context.rs  attention_layout_driver.rs  attention_model.rs  audit_trail.rs  auto_capture.rs  auto_findings.rs  auto_mode_resolver.rs  autonomy_drivers.rs  bandit.rs  benchmark.rs  binary_detect.rs  bm25_cache.rs  bounce_tracker.rs  buddy.rs  budget_tracker.rs  budgets.rs  cache.rs  call_graph.rs  capabilities.rs  ccp_session_bundle.rs  chunk_data.rs  chunks_ts.rs  claim_extractor.rs  (+256 more)
rust/src/dashboard/: base_path.rs  dashboard.html  mod.rs  vscode_open.rs
rust/src/doctor/: checks.rs  checks_tests.rs  common.rs  deprecations.rs  fix.rs  integrations.rs  lint_context.rs  migrate.rs  mod.rs  overhead.rs  report.rs  workspace_scope.rs
rust/src/engine/: mod.rs
rust/src/hook_handlers/: mod.rs  observe.rs  payload.rs  tests.rs
rust/src/hooks/: agents.rs  mod.rs  support.rs
rust/src/http_server/: context_views.rs  mod.rs  roi_webhook.rs  savings_ingest.rs  savings_summary.rs  team.rs  team_billing.rs
rust/src/ipc/: mod.rs  process.rs
rust/src/lsp/: backend.rs  client.rs  config.rs  edit_apply.rs  jetbrains_backend.rs  mod.rs  port_discovery.rs  router.rs
rust/src/proxy/: anthropic.rs  cache_attribution.rs  cache_safety.rs  ccr.rs  chatgpt.rs  chatgpt_cookies.rs  cold_prefix.rs  compress.rs  compress_api.rs  cost.rs  effort.rs  forward.rs  google.rs  history_prune.rs  holdout.rs  introspect.rs  metrics.rs  mod.rs  openai.rs  openai_responses.rs  openai_responses_ws.rs  output_savings.rs  prose.rs  prose_ranker.rs  tool_kind.rs  usage.rs  usage_meter.rs  verbosity.rs
rust/src/rules_inject/: content.rs  detect.rs  mod.rs  skills.rs  targets.rs  tests.rs  (+1 more)
rust/tests/: adversarial_compression.rs  archive_expand_tests.rs  autonomy_tests.rs  bazsi_reported_scenarios.rs  capabilities_contract_up_to_date.rs  claude_config_dir.rs  cli_anti_inflation.rs  cli_characterization.rs  cloud_pro_features_e2e.rs  codex_proxy_554.rs  compaction_cache_scenarios.rs  compaction_survival_tests.rs  compliance_frameworks.rs  conformance_suite.rs  context_cortex_e2e_scenarios.rs  context_cortex_phase1.rs  context_cortex_phase2.rs  context_cortex_phase3.rs  context_radar_perf.rs  contracts_frozen.rs  cortex_wiring_integration.rs  critical_module_integration.rs  ctx_compose_scenarios.rs  daviddatu_powershell_scenarios.rs  docs_tool_counts_up_to_date.rs  dropin_install_tests.rs  dual_process_rehydrate.rs  e2e_test.py  engine_call.rs  entrypoints_wired.rs  eval_harness_integration.rs  evidence_bundle_e2e.rs  gateway_e2e.rs  glob_cli_556.rs  graph_provider_cold_open.rs  hardening_ir_traits.rs  hn_hardening_scenarios.rs  http_server_streamable.rs  index_scoping_scenarios.rs  integration_tests.rs  (+74 more)
(+1114 files in other folders)
