[package]
name = "lean-ctx-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
description = "Thin, stable HTTP client for the lean-ctx Context OS /v1 contract. Integrate over the process boundary without linking the engine."
repository = "https://github.com/yvgude/lean-ctx"
homepage = "https://leanctx.com"
readme = "README.md"
keywords = ["lean-ctx", "mcp", "llm", "context"]
categories = ["api-bindings", "web-programming::http-client"]

# Intentionally standalone: this crate is NOT part of the engine workspace
# (`../../../rust`). Embedders depend on a curated client surface, never on the
# engine internals. See `src/lib.rs` ("Non-goals") for the boundary contract.

[dependencies]
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
all = "warn"
